--- a/projects/sandbox/bilby/pyproject.toml
+++ b/projects/sandbox/bilby/pyproject.toml
@@ -10,6 +10,8 @@ python = ">=3.9,<3.11"
 typeo = {git = "https://github.com/ML4GW/typeo.git"}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
 "mlpe.injection" = {path = "../../../libs/injection", develop = true} # needed for loading sg waveform
+bilby = "^2.0.0"
+bilby_pipe = "^1.0.8"
 
 [tool.poetry.scripts]
 analyze-with-bilby = "bilby_analysis:main"
