generate gaussian background, and injections in gaussian noise (#60)
* add toggle for gaussian noise

* update doocstring

* add logging statement

* allow psd from file

* add is_psd argument

* remove pycbc dep

* begin unit tessts for oise_from_psd

* invert timeseries and check for constant power

* incorporate new noise_fom_psd function

---------

Co-authored-by: Deep Chatterjee <deep.chatterjee@ligo.org>

--- a/projects/sandbox/data_generation/pyproject.toml
+++ b/projects/sandbox/data_generation/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["ethan.marx <ethan.marx@ligo.org>"]
 license = "MIT"
 include = ["data_generation/", "tests/"]
 
+[tool.pinto]
+conda = {append_base_ld_library_path = true}
+
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 "ml4gw" = {path = "../../../ml4gw/", develop = true}
