--- a/projects/sandbox/data_generation/pyproject.toml
+++ b/projects/sandbox/data_generation/pyproject.toml
@@ -21,6 +21,7 @@ pycbc = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+ipykernel = "^6.21.3"
 
 [tool.poetry.scripts]
 generate-background = "data_generation.background:main"
