--- a/libs/injection/pyproject.toml
+++ b/libs/injection/pyproject.toml
@@ -11,7 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 lalsuite = "^7.4"
-bilby = "^2.0.0"
+bilby = "<=2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2"
