--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -15,7 +15,7 @@ datadir = "${DATA_DIR}"
 logdir = "${BASE_DIR}/log"
 sample_rate = 2048
 ifos = ['H1', 'L1']
-inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "phi"]
+inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "ra"]
 trigger_distance = 0.0
 start = 1262607622
 stop = 1262620622
@@ -156,9 +156,9 @@ writedir = "${base.basedir}"
 datadir = "${base.datadir}"
 logdir = "${base.logdir}"
 num_samples_draw = 10000
-num_plot_corner = 30
 device = "cuda"
 channel = "${base.channel}"
+basedir = "${base.basedir}"
 
 # arch parameters
 commands.coupling = "${base.coupling}"
