upate writedir of bilby runs

--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -137,7 +137,7 @@ ifos = "${base.ifos}"
 bilby_duration = "${base.bilby_duration}"
 waveform = "mlpe.injection.waveforms.sine_gaussian_frequency"
 datadir = "${base.datadir}"
-writedir = "${base.basedir}"
+writedir = "${base.datadir}"
 logdir = "${base.logdir}"
 accounting_group = "${LIGO_ACCOUNTING_GROUP}"
 channel = "${base.channel}"
