--- a/projects/sandbox/sample_with_flow/pyproject.toml
+++ b/projects/sandbox/sample_with_flow/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.poetry]
-name = "sample"
-version = "0.0.0"
-description = "Generate samples from testing set, get diagnostic plots"
-authors = ["Deep Chatterjee <deep.chatterjee@ligo.org>"]
+name = "sample_with_flow"
+version = "0.1.0"
+description = "Produce posterior samples of injections with our network"
+authors = ["ethan.marx <ethan.marx@ligo.org>"]
 license = "MIT"
+readme = "README.md"
+packages = [{include = "sample_with_flow"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
-typeo = {git = "https://github.com/ML4GW/typeo.git"}
+python = "^3.9"
+
 torch = {version = "^1.12", source = "torch"}
 
 "mlpe.data" = {path = "../../../libs/data", develop  = true}
@@ -16,18 +18,11 @@ torch = {version = "^1.12", source = "torch"}
 "mlpe.injection" = {path = "../../../libs/injection", develop = true}
 "ml4gw" = {path = "../../../ml4gw", develop = true}
 
-bilby = "^2.0.0"
-bilby_pipe = "^1.0.8"
-
 [[tool.poetry.source]]
 name = "torch"
 url = "https://download.pytorch.org/whl/cu116"
 secondary = true
 default = false
-
-[tool.poetry.scripts]
-sample-testing-with-flow = "sample_with_flow:main"
-sample-testing-with-bilby = "sample_with_bilby:main"
 
 [build-system]
 requires = ["poetry-core"]
