--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -15,7 +15,7 @@ datadir = "${DATA_DIR}"
 logdir = "${BASE_DIR}/log"
 sample_rate = 2048
 ifos = ['H1', 'L1']
-inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "ra"]
+inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "phi"]
 trigger_distance = 0.0
 start = 1262607622
 stop = 1262620622
@@ -30,8 +30,8 @@ kernel_length = 2
 highpass = 32
 fduration = 1
 waveform_duration = 8
-coupling = {num_flow_steps = 10}
-maf = {num_transforms = 10}
+coupling = {num_flow_steps = 20}
+maf = {num_transforms = 20}
 bilby_duration = 4
 
 
@@ -47,6 +47,7 @@ ifos = "${base.ifos}"
 sample_rate = "${base.sample_rate}" 
 minimum_length = 10000
 force_generation = "${base.force_generation}"
+df = 0.125
 gaussian = true
 
 [tool.typeo.scripts.generate-waveforms]
@@ -77,7 +78,7 @@ batch_size = 512
 batches_per_epoch = 200
 max_epochs = 300
 
-lr = 4e-3
+lr = 4e-4
 
 early_stop = 30
 
