--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -15,7 +15,7 @@ datadir = "${DATA_DIR}"
 logdir = "${BASE_DIR}/log"
 sample_rate = 2048
 ifos = ['H1', 'L1']
-inference_params = ["frequency", "quality", "hrss", "phase", "dec", "psi", "phi"]
+inference_params = ["dec", "phi", "psi"]
 trigger_distance = 0.0
 start = 1262607622
 stop = 1262620622
@@ -30,8 +30,8 @@ kernel_length = 2
 highpass = 32
 fduration = 1
 waveform_duration = 8
-coupling = {num_flow_steps = 20}
-maf = {num_transforms = 20}
+coupling = {num_flow_steps = 15}
+maf = {num_transforms = 15}
 bilby_duration = 4
 
 
@@ -78,7 +78,7 @@ batch_size = 512
 batches_per_epoch = 200
 max_epochs = 300
 
-lr = 4e-4
+lr = 1e-3
 
 early_stop = 30
 
@@ -130,8 +130,8 @@ logdir = "${base.logdir}"
 gaussian = false
 
 [tool.typeo.scripts.sample-with-bilby]
-request_cpus = 12
-n_live = 1000
+request_cpus = 24
+n_live = 256
 n_act = 5
 ifos = "${base.ifos}"
 bilby_duration = "${base.bilby_duration}"
@@ -142,7 +142,7 @@ accounting_group = "${LIGO_ACCOUNTING_GROUP}"
 channel = "${base.channel}"
 sample_rate = "${base.sample_rate}"
 prior = "${base.prior}"
-force_generation = true
+force_generation = false
 
 [tool.typeo.scripts.sample-with-flow]
 ifos = "${base.ifos}"
