allow only extrinisic params to be used for training

--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -15,7 +15,7 @@ datadir = "${DATA_DIR}"
 logdir = "${BASE_DIR}/log"
 sample_rate = 2048
 ifos = ['H1', 'L1']
-inference_params = ["dec", "phi", "psi"]
+inference_params = ["dec", "psi", "phi"]
 trigger_distance = 0.0
 start = 1262607622
 stop = 1262620622
