--- a/projects/sandbox/train/pyproject.toml
+++ b/projects/sandbox/train/pyproject.toml
@@ -8,10 +8,13 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 torch = {version = "^1.12", source = "torch"}
+
+"mlpe.architectures" = {path = "../../../libs/architectures", develop = true}
 "mlpe.data" = {path = "../../../libs/data", develop  = true}
 "mlpe.trainer" = {path = "../../../libs/trainer", develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
 "ml4gw" = {path = "../../../ml4gw", develop = true}
+
 typeo = {path = "../../../typeo", develop = true}
 
 [[tool.poetry.source]]
