--- a/projects/sandbox/sample_with_flow/pyproject.toml
+++ b/projects/sandbox/sample_with_flow/pyproject.toml
@@ -14,7 +14,10 @@ torch = {version = "^1.12", source = "torch"}
 "mlpe.trainer" = {path = "../../../libs/trainer", develop = true}
 "mlpe.logging" = {path = "../../../libs/logging", develop = true}
 "mlpe.injection" = {path = "../../../libs/injection", develop = true}
+
 "ml4gw" = {path = "../../../ml4gw", develop = true}
+typeo = {path = "../../../typeo", develop = true}
+
 ligo-skymap = "^1.0.7"
 
 [tool.poetry.scripts]
