--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -46,7 +46,7 @@ maf = {num_transforms = 10, num_blocks = 2, use_batch_norm = true}
 # embedding subcommands
 dense = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
 coherent = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 128, layers = [2, 2], norm_groups = 8}
+resnet = {context_dim = 128, layers = [2, 2, 2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -90,7 +90,7 @@ batch_size = 512
 batches_per_epoch = "${base.batches_per_epoch}"
 max_epochs = "${base.max_epochs}"
 
-early_stop = 30
+early_stop = 1000
 
 device = "cuda"
 profile = false
