--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -46,7 +46,7 @@ maf = {num_transforms = 15, num_blocks = 2, use_batch_norm = true}
 # embedding subcommands
 dense = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
 coherent = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 128, layers = [2, 2, 2], norm_groups = 8}
+resnet = {context_dim = 128, layers = [2, 2, 2, 2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -115,7 +115,7 @@ adam = {lr = 1e-4}
 
 # optimizer subcommand
 [tool.typeo.scripts.train.scheduler]
-onecycle = {max_lr = 4e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 200, steps_per_epoch = "${base.batches_per_epoch}" }
+onecycle = {max_lr = 3e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 200, steps_per_epoch = "${base.batches_per_epoch}" }
 
 
 [tool.typeo.scripts.generate-flow-injections]
