--- a/projects/sandbox/pyproject.toml
+++ b/projects/sandbox/pyproject.toml
@@ -7,8 +7,8 @@ steps = [
     "data_generation:generate-flow-injections",
     "data_generation:generate-bilby-injections",
     "sample_with_bilby:sample-with-bilby",
-    "train:train:maf",
-    "sample_with_flow:sample-with-flow:maf"
+    "train:train:maf:resnet",
+    "sample_with_flow:sample-with-flow:maf:resnet"
 ]
 
 [tool.typeo.base]
@@ -42,12 +42,12 @@ max_epochs = 1000
 
 # flow subcommands
 coupling = {num_flow_steps = 10}
-maf = {num_transforms = 6, num_blocks = 2, use_batch_norm = true}
+maf = {num_transforms = 15, num_blocks = 2, use_batch_norm = true}
 
 # embedding subcommands
-dense = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
-coherent = {context_dim = 50, hidden_layer_size = 128, num_hidden_layers = 2}
-resnet = {context_dim = 64, layers = [2, 2], norm_groups = 8}
+dense = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
+coherent = {context_dim = 64, hidden_layer_size = 128, num_hidden_layers = 2}
+resnet = {context_dim = 128, layers = [2, 2], norm_groups = 8}
 
 [tool.typeo.scripts.generate-background]
 datadir = "${base.datadir}"
@@ -117,7 +117,7 @@ adam = {lr = 1e-4, weight_decay = 1e-4}
 
 # optimizer subcommand
 [tool.typeo.scripts.train.scheduler]
-onecycle = {max_lr = 5e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 100, steps_per_epoch = "${base.batches_per_epoch}" }
+onecycle = {max_lr = 2e-3, epochs = "${base.max_epochs}", lr_ramp_epochs = 200, steps_per_epoch = "${base.batches_per_epoch}" }
 
 
 [tool.typeo.scripts.generate-flow-injections]
